--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -3,7 +3,15 @@ name = "frontend"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 yew = "0.19.3"
+yew-router = "0.16.0"
+instant = { version = "0.1", features = ["wasm-bindgen"] }
+lipsum = "0.8"
+log = "0.4"
+getrandom = { version = "0.2", features = ["js"] }
+rand = { version = "0.8", features = ["small_rng"] }
+wasm-logger = "0.2"
+serde = { version = "1.0", features = ["derive"] }
+lazy_static = "1.4.0"
+gloo-timers = "0.2"
